--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -6,7 +6,7 @@
    "id": "3ad90211",
    "metadata": {},
    "source": [
-    "### **1. Импорт библиотек и загрузка данных.**"
+    "## **1. Импорт библиотек и загрузка данных.**"
    ]
   },
   {
@@ -48,6 +48,15 @@
     "pd.options.mode.chained_assignment = None\n",
     "import warnings\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6c8e431b",
+   "metadata": {},
+   "source": [
+    "**Загрузим данные, приведем названия столбцов к нижнему регистру и заменим проблем на символ '_'.**"
    ]
   },
   {
