--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -56,7 +56,7 @@
    "id": "6c8e431b",
    "metadata": {},
    "source": [
-    "**Загрузим данные, приведем названия столбцов к нижнему регистру и заменим проблем на символ '_'.**"
+    "Загрузим данные, приведем названия столбцов к нижнему регистру и заменим проблем на символ '_'."
    ]
   },
   {
@@ -298,6 +298,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e197d8ec",
+   "metadata": {},
+   "source": [
+    "## **2. Предварительная обработка данных.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "981f683c",
+   "metadata": {},
+   "source": [
+    "Проверим, имеются ли дупликаты в нашем датасете."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "be0c80cc",
@@ -316,6 +334,16 @@
    ],
    "source": [
     "telecom.duplicated().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c8b0ddc3",
+   "metadata": {},
+   "source": [
+    "Отлично, дупликатов нет. Для начала, преобразуем все категориальные переменные в количественные с помощью LabelEncoder.\n",
+    "Таковых две - 'contract_renewal' и 'data_plan.'"
    ]
   },
   {
@@ -347,6 +375,15 @@
    ],
    "source": [
     "telecom.dtypes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c586b62",
+   "metadata": {},
+   "source": [
+    "Переменные имеют всего 2 уникальных значения: Yes и No. После кодировки, Yes изменит значения на 1, а No - на 0."
    ]
   },
   {
