--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -6,6 +6,53 @@
    "id": "3ad90211",
    "metadata": {},
    "source": [
+    "# **Проектная работа.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "75bddf3d",
+   "metadata": {},
+   "source": [
+    "## **Описание работы.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5f6fa8e2",
+   "metadata": {},
+   "source": [
+    "По данным телекоммуникационной компании, нужно провести анализ средних значений признаков для активных и ушедших из сервиса клиентов. Провести кластеризацию клиентов по тем или иным признакам. Построить девять моделей бинарной классификации для предсказания оттока клиентов и выбрать одну с наилучшими метриками. Дать рекомендации по удержанию клиентов в числе активных."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "573c3b52",
+   "metadata": {},
+   "source": [
+    "## **Описание датасета.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b2d9116a",
+   "metadata": {},
+   "source": [
+    "-`churn` - отказался ли клиент от использования сервиса.\n",
+    "-`account_weeks` - количество недель, в течение которых у клиента был активный счёт.\n",
+    "-`contract_renewal` - продливал ли клиент недавно контракт."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0a5f2b6b",
+   "metadata": {},
+   "source": [
     "## **1. Импорт библиотек и загрузка данных.**"
    ]
   },
@@ -342,7 +389,7 @@
    "id": "c8b0ddc3",
    "metadata": {},
    "source": [
-    "Отлично, дупликатов нет. Для начала, преобразуем все категориальные переменные в количественные с помощью LabelEncoder.\n",
+    "Отлично, дупликатов нет. Для начала, преобразуем все категориальные переменные в количественные с помощью `LabelEncoder`.\n",
     "Таковых две - 'contract_renewal' и 'data_plan.'"
    ]
   },
@@ -411,6 +458,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e94a68b8",
+   "metadata": {},
+   "source": [
+    "Закодируем переменные."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "a1af94c0",
@@ -420,6 +476,16 @@
     "enc = LabelEncoder()\n",
     "col = ['contract_renewal', 'data_plan']\n",
     "telecom[col] = telecom[col].apply(enc.fit_transform)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b2cf2a06",
+   "metadata": {},
+   "source": [
+    "Теперь проверим, имеются ли в нашем наборе данных пустые значения. Если они есть - без предобработки однозначно не получится\n",
+    "построить модель."
    ]
   },
   {
@@ -451,6 +517,15 @@
    ],
    "source": [
     "telecom.isna().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "94e072f1",
+   "metadata": {},
+   "source": [
+    "В датасете имеются пропущенные значения. Обработаем их с помощью **IterativeImputer**."
    ]
   },
   {
@@ -495,6 +570,15 @@
    ],
    "source": [
     "telecom_data.isna().sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0b35ec66",
+   "metadata": {},
+   "source": [
+    "После обработки пропущенных значений, посмотрим, стоит ли стандартизировать наши данные."
    ]
   },
   {
@@ -677,6 +761,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6cda67b7",
+   "metadata": {},
+   "source": [
+    "В количественных переменных имеются серьезные расхождения масштаба, поэтому, в будущем, на этапе разбиения данных на\n",
+    "тренировочную и тестовую выборку, нужно будет стандартизировать данные."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fc902b0d",
+   "metadata": {},
+   "source": [
+    "## **3. Исследовательский анализ данных.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57298810",
+   "metadata": {},
+   "source": [
+    "Изучим распределение значений независимых переменных в срезе на отток клиента. Для этого применем визуализация с помощью\n",
+    "библиотек **matplotlib** и **seaborn** на наши переменные."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0bfea4cf",
+   "metadata": {},
+   "source": [
+    "### **account_weeks**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "b38cc767",
@@ -696,6 +818,25 @@
    "source": [
     "sns.kdeplot(data=telecom_data, x='account_weeks', hue='churn', fill=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f44641b7",
+   "metadata": {},
+   "source": [
+    "Распределение переменной количества недель, в течение которого клиент имел активный счет, ничем не отличается от нормального\n",
+    "в независимости от факта оттока."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3439ab68",
+   "metadata": {},
+   "source": [
+    "### **contract_renewal**"
    ]
   },
   {
