--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -42,9 +42,39 @@
    "id": "b2d9116a",
    "metadata": {},
    "source": [
-    "-`churn` - отказался ли клиент от использования сервиса.\n",
-    "-`account_weeks` - количество недель, в течение которых у клиента был активный счёт.\n",
-    "-`contract_renewal` - продливал ли клиент недавно контракт."
+    "- `churn` - отказался ли клиент от использования сервиса.\n",
+    "- `account_weeks` - количество недель, в течение которых у клиента был активный счёт.\n",
+    "- `contract_renewal` - продливал ли клиент недавно контракт.\n",
+    "- `data_plan` - имеется ли тарифный план у клиента.\n",
+    "- `data_usage` - количество гигабайтов, потраченных клиентом за последний месяц.\n",
+    "- `cust_serv_calls` - количество обращений в службу поддержки клиентов.\n",
+    "- `day_mins` - ежемесячное число минут, которые клиент тратит на телефонные звонки.\n",
+    "- `monthly_charge` - среднемесячная оплата за использование сервиса\n",
+    "- `overage_fee` - наибольшая переплата за переиспользование стандартного пользовательского пакета сервиса за последние 12 месяцев.\n",
+    "- `roam_mins` - среднее количество минут в роуминге."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d6a0175c",
+   "metadata": {},
+   "source": [
+    "## **План работы.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ef845fb8",
+   "metadata": {},
+   "source": [
+    "1. Импорт библиотек и загрузка данных.\n",
+    "2. Предварительная обработка данных.\n",
+    "3. Исследовательский анализ данных.\n",
+    "4. Кластеризация клиентов.\n",
+    "5. выбор, обучение и оценка качества модели прогнозирования оттока клиентов.\n",
+    "6. Вывод и рекомендации."
    ]
   },
   {
@@ -525,7 +555,7 @@
    "id": "94e072f1",
    "metadata": {},
    "source": [
-    "В датасете имеются пропущенные значения. Обработаем их с помощью **IterativeImputer**."
+    "В датасете имеются пропущенные значения. Обработаем их с помощью `IterativeImputer`."
    ]
   },
   {
@@ -786,7 +816,7 @@
    "metadata": {},
    "source": [
     "Изучим распределение значений независимых переменных в срезе на отток клиента. Для этого применем визуализация с помощью\n",
-    "библиотек **matplotlib** и **seaborn** на наши переменные."
+    "библиотек `matplotlib` и `seaborn` на наши переменные."
    ]
   },
   {
