--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -69,12 +69,12 @@
    "id": "ef845fb8",
    "metadata": {},
    "source": [
-    "1. Импорт библиотек и загрузка данных.\n",
-    "2. Предварительная обработка данных.\n",
-    "3. Исследовательский анализ данных.\n",
-    "4. Кластеризация клиентов.\n",
-    "5. выбор, обучение и оценка качества модели прогнозирования оттока клиентов.\n",
-    "6. Вывод и рекомендации."
+    "1. **Импорт библиотек и загрузка данных.**\n",
+    "2. **Предварительная обработка данных.**\n",
+    "3. **Исследовательский анализ данных.**\n",
+    "4. **Кластеризация клиентов.**\n",
+    "5. **Выбор, обучение и оценка качества модели прогнозирования оттока клиентов.**\n",
+    "6. **Вывод и рекомендации.**"
    ]
   },
   {
@@ -928,6 +928,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "91fb8f25",
+   "metadata": {},
+   "source": [
+    "Как можно было изначально догадаться, пользователи, недавно продлившие контракт, как правило, остаются клиентами сервиса. При\n",
+    "этом, пользователи, ушедшие с сервиса, лишь в 36.6% случаев отказались от недавнего продления контракта."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f1a8f1ae",
+   "metadata": {},
+   "source": [
+    "### **data_plan**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "45a180be",
@@ -985,6 +1004,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "96ac19cf",
+   "metadata": {},
+   "source": [
+    "У большинства клиентов нет тарифного плана. У ушедших клиентов данный показатель выше всего на 12.9%, что не является\n",
+    "существенным показателем."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0cd9c691",
+   "metadata": {},
+   "source": [
+    "### **data_usage**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "5107730a",
@@ -1007,6 +1045,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e7d3efdf",
+   "metadata": {},
+   "source": [
+    "Исходя из данного графика можно заключить, что большинство клиентов сервиса не пользуются интернетом."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dc68bf2b",
+   "metadata": {},
+   "source": [
+    "Взглянем на `boxplot`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "b57726a2",
@@ -1026,6 +1082,28 @@
    "source": [
     "sns.boxplot(data=telecom_data, x='churn', y='data_usage')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6d91f38e",
+   "metadata": {},
+   "source": [
+    "Действительно, порядка половины действующих клиентов не пользуются интернетом совсем. С ушедшими пользователями картина схожа,\n",
+    "но среди них еще больше клиентов, не потративших ни одного мегабайта интернета."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ac29cf5f",
+   "metadata": {},
+   "source": [
+    "Создадим временную переменную **data_usage_gt_0**, принимающую 2 значения:\n",
+    "- `0` - пользователь использовал 0 МБ ежемесячного\n",
+    "интернета.\n",
+    "- `1` - больше, чем 0 МБ на любое число."
    ]
   },
   {
@@ -1058,6 +1136,16 @@
    "source": [
     "plt.pie(telecom_data['data_usage_gt_0'].value_counts(), labels = ['No', 'Yes'], colors=colors, autopct='%1.1f%%')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8915fbc9",
+   "metadata": {},
+   "source": [
+    "Подтвердилась гипотеза о том, что большинство наших клиентов не пользуются интернетом. Теперь взглянем на данное\n",
+    "распределение по факту оттока клиента."
    ]
   },
   {
@@ -1096,6 +1184,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4af0dab4",
+   "metadata": {},
+   "source": [
+    "Поскольку процентное соотношение клиентов, пользующихся и непользующихся интернетом, в срезе на отток, отличается лишь на\n",
+    "*14.4%*, можно с уверенностью сделать вывод, что использование интернета - не влияет на уход клиента из сервиса."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f6ba364a",
+   "metadata": {},
+   "source": [
+    "Удалим временную переменную **data_usage_gt_0**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "c7c599ac",
@@ -1103,6 +1210,15 @@
    "outputs": [],
    "source": [
     "telecom_data.drop(['data_usage_gt_0'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "03cfaa9d",
+   "metadata": {},
+   "source": [
+    "### **cust_serv_calls**"
    ]
   },
   {
@@ -1125,6 +1241,15 @@
    "source": [
     "sns.boxplot(data=telecom_data, x='churn', y='cust_serv_calls')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c541e37",
+   "metadata": {},
+   "source": [
+    "Ушедшие пользователи значимо чаще обращаются в службу поддержки. Изучим описательную статистику по факту оттока клиента."
    ]
   },
   {
@@ -1168,6 +1293,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "862b6baa",
+   "metadata": {},
+   "source": [
+    "*75%* активных клиентов звонили в службу поддержки <= 2 раз. В то время, как у ушедших пользователей - прямо противоположная\n",
+    "ситуация. Возможно, стоит преобразовать переменную **cust_serv_calls** из количественного типа в категориальный, указав *95%*\n",
+    "квантиль количества обращений в службу поддержки активных пользователей в качестве разделяющего значения."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "590845bf",
@@ -1186,6 +1322,18 @@
    ],
    "source": [
     "telecom_data.query(\"churn==0\")['cust_serv_calls'].quantile(0.95)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "20651f34",
+   "metadata": {},
+   "source": [
+    "Преобразим переменную **cust_serv_calls** в переменную категориального типа, принимающую 2 значения:\n",
+    "- `0` - пользователь\n",
+    "обращался в службу поддержки <= 3 раз.\n",
+    "- `1` - более 3 обращений в поддержку."
    ]
   },
   {
@@ -1267,6 +1415,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "21918831",
+   "metadata": {},
+   "source": [
+    "Активные пользователи, за исключением *4.5%* от их общего количества, не обращаются в службу поддержки более 3 раз. В то время,\n",
+    "как ушедшие пользователи почти в половине случаев обращались в службу поддержки более 3 раз. Возможно, ушедшие пользователи\n",
+    "испытывали те или иные проблемы с качеством сервиса и потому обращались в тех-поддержку. Однако, их проблема так и не была\n",
+    "решена, поэтому они отказались от использования сервиса. Так или иначе, влияение переменной **cust_serv_calls** оказалось довольно\n",
+    "значимым."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c9ed88e7",
+   "metadata": {},
+   "source": [
+    "### **day_mins**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "7988be2a",
@@ -1286,6 +1456,25 @@
    "source": [
     "sns.kdeplot(data=telecom_data, x='day_mins', hue='churn', fill=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "315d3f30",
+   "metadata": {},
+   "source": [
+    "Распределение переменной числа ежемесячных минут, которые пользователь тратит на звонки, значимо отличается в срезе на отток\n",
+    "клиента."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "663bfb74",
+   "metadata": {},
+   "source": [
+    "Взглянем на `boxplot` и медианное значение переменной **day_mins** по факту оттока."
    ]
   },
   {
@@ -1318,6 +1507,24 @@
     "plt.show()\n",
     "for i in telecom_data['churn'].unique():\n",
     "    print(f'Churn={i}:',telecom_data.query(f\"churn=={i}\")['day_mins'].median())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d87274d",
+   "metadata": {},
+   "source": [
+    "Различие в медианном значении составляет *52.6* единиц."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "06d90cc8",
+   "metadata": {},
+   "source": [
+    "Посмотрим на описательную статистику и *5%* квантиль."
    ]
   },
   {
@@ -1381,6 +1588,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "31ebfb03",
+   "metadata": {},
+   "source": [
+    "Расхождения значимые. Возможно, чем больше времени клиент проводит в разговорах по телефону, тем с большей вероятностью он\n",
+    "покинет сервис."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b24d856c",
+   "metadata": {},
+   "source": [
+    "Для проверки гипотезы, рассчитаем p-value.\n",
+    "- `H0` - переменная **day_mins** не оказывает влияния на отток клиента.\n",
+    "- `H1` - переменная **day_mins** оказывает влияние на отток клиента."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "540e121b",
@@ -1404,6 +1632,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f3004e63",
+   "metadata": {},
+   "source": [
+    "И наконец, рассчитаем коэффициент корреляции Пирсона."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "f3976714",
@@ -1422,6 +1659,35 @@
    ],
    "source": [
     "pearsonr(telecom_data['day_mins'], telecom_data['churn'])[0]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "429931bb",
+   "metadata": {},
+   "source": [
+    "Была подтверждена альтернативная гипотеза. Поскольку между переменными **day_mins** и **churn** существует достаточная\n",
+    "положительная взаимосвязь, можно предположить, что клиенты, отказавшиеся от услуг сервиса, тратившие больше времени на звонки, чаще сталкивалсь с проблемами со связью, чем активные пользователи, тратившие на звонки, в среднем, значимо\n",
+    "меньше времени."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fb074c61",
+   "metadata": {},
+   "source": [
+    "### **monthly_charge**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c4185555",
+   "metadata": {},
+   "source": [
+    "Посмотрим на график распределения, `boxplot` и описательную статистику в срезе на отток."
    ]
   },
   {
@@ -1506,6 +1772,25 @@
    "source": [
     "for i in telecom_data['churn'].unique():\n",
     "    print(f'\\nChurn={i}\\n',telecom_data.query(f\"churn=={i}\")['monthly_charge'].describe())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "82cc4234",
+   "metadata": {},
+   "source": [
+    "Можно с уверенностью сказать, что перемеменная числа среднемесячной оплаты за использование сервиса не оказывает значимого\n",
+    "влияния на отток клиента."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7d0791e8",
+   "metadata": {},
+   "source": [
+    "### **overage_fee**"
    ]
   },
   {
