pre-end markdown

--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -389,7 +389,7 @@
    "id": "981f683c",
    "metadata": {},
    "source": [
-    "Проверим, имеются ли дупликаты в нашем датасете."
+    "Проверим, имеются ли дубликаты в нашем датасете."
    ]
   },
   {
@@ -420,7 +420,7 @@
    "metadata": {},
    "source": [
     "Отлично, дупликатов нет. Для начала, преобразуем все категориальные переменные в количественные с помощью `LabelEncoder`.\n",
-    "Таковых две - 'contract_renewal' и 'data_plan.'"
+    "Таковых две - **contract_renewal** и **data_plan**."
    ]
   },
   {
@@ -934,7 +934,7 @@
    "metadata": {},
    "source": [
     "Как можно было изначально догадаться, пользователи, недавно продлившие контракт, как правило, остаются клиентами сервиса. При\n",
-    "этом, пользователи, ушедшие с сервиса, лишь в 36.6% случаев отказались от недавнего продления контракта."
+    "этом, пользователи, ушедшие с сервиса, лишь в *36.6%* случаев отказались от недавнего продления контракта."
    ]
   },
   {
@@ -1009,8 +1009,7 @@
    "id": "96ac19cf",
    "metadata": {},
    "source": [
-    "У большинства клиентов нет тарифного плана. У ушедших клиентов данный показатель выше всего на 12.9%, что не является\n",
-    "существенным показателем."
+    "У большинства клиентов нет тарифного плана. У ушедших клиентов данный показатель выше всего на *12.9%*, что не является существенным показателем."
    ]
   },
   {
@@ -1101,8 +1100,7 @@
    "metadata": {},
    "source": [
     "Создадим временную переменную **data_usage_gt_0**, принимающую 2 значения:\n",
-    "- `0` - пользователь использовал 0 МБ ежемесячного\n",
-    "интернета.\n",
+    "- `0` - пользователь использовал 0 МБ ежемесячного интернета.\n",
     "- `1` - больше, чем 0 МБ на любое число."
    ]
   },
@@ -1331,8 +1329,7 @@
    "metadata": {},
    "source": [
     "Преобразим переменную **cust_serv_calls** в переменную категориального типа, принимающую 2 значения:\n",
-    "- `0` - пользователь\n",
-    "обращался в службу поддержки <= 3 раз.\n",
+    "- `0` - пользователь обращался в службу поддержки <= 3 раз.\n",
     "- `1` - более 3 обращений в поддержку."
    ]
   },
@@ -1816,6 +1813,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f7671d4a",
+   "metadata": {},
+   "source": [
+    "Распределение переменной числа наибольшей переплаты за использование сервиса за последний год, судя по `kdeplot'y`, на порядок\n",
+    "выше у ушедших клиентов. Пристальнее изучим распределение переменной **overage_fee** в срезе на отток."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "id": "6bc45473",
@@ -1878,6 +1885,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "92d773ca",
+   "metadata": {},
+   "source": [
+    "И по графику **boxplot**, и по медианному значению, значение переменной **overage_fee** значимо выше у ушедших пользователей.\n",
+    "Разница среднего: *3.08*. Вероятнее, число наибольшей переплаты за последний год действительно оказывает влияние на отток\n",
+    "клиента."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e19328c5",
+   "metadata": {},
+   "source": [
+    "Создадим временную переменную, разделяющую значение переменной **overage_fee** по *95%* квантилю активных пользователей."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "a7536b65",
@@ -1896,6 +1923,17 @@
    ],
    "source": [
     "telecom_data.query(\"churn==0\")['overage_fee'].quantile(0.95)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57e5547e",
+   "metadata": {},
+   "source": [
+    "Временная переменная **overage_fee_gt_9_83** принимает 2 значения:\n",
+    "- `0` - наибольшая переплата за использование сервиса за последний год составляет < 9.83;\n",
+    "- `1` - более 9.83."
    ]
   },
   {
@@ -1967,6 +2005,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "71911078",
+   "metadata": {},
+   "source": [
+    "У ушедших пользователей на *33.2%* чаще максимальная переплата за использование сервиса составляет более *9.83*. Довольно\n",
+    "значимый результат. Проверим гипотезу о значимости влияения переменной **overage_fee** на отток клиента."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "11f004a9",
+   "metadata": {},
+   "source": [
+    "Для проверки гипотезы, рассчитаем p-value.\n",
+    "- `H0` - переменная **overage_fee** не оказывает влияния на отток клиента.\n",
+    "- `H1` - переменная **overage_fee** оказывает влияние на отток клиента."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "4d4b7a90",
@@ -1987,6 +2046,15 @@
     "    print('Отвергаем H0.')\n",
     "else:\n",
     "    print('не получилось отвергнуть H0.')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1832507b",
+   "metadata": {},
+   "source": [
+    "Рссчитаем корреляцию между **overage_fee** и **churn**."
    ]
   },
   {
@@ -2011,6 +2079,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "79955b15",
+   "metadata": {},
+   "source": [
+    "Была подтверждена альтернативная гипотеза о влиянии переменной **overage_fee** на факт отток клиента и установлен значимый\n",
+    "положительная коэффициент корреляции в *0.53* единицы. Можно предположить, что одним из факторов ухода клиентов из сервиса\n",
+    "являются существенные переплаты за превышение стандартного пользовательского пакета. Возможно, для снижения оттока клиентов, в качестве предельного\n",
+    "значения суммы переплаты стоит указать *9.83*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3aa3a27e",
+   "metadata": {},
+   "source": [
+    "Удалим временную переменную **overage_fee_gt_9_83**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "33d422e0",
@@ -2018,6 +2107,15 @@
    "outputs": [],
    "source": [
     "telecom_data.drop(['overage_fee_gt_9_83'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1579d104",
+   "metadata": {},
+   "source": [
+    "### **roam_mins**"
    ]
   },
   {
@@ -2065,6 +2163,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bd30f7d1",
+   "metadata": {},
+   "source": [
+    "Значение переменной среднего числа минут в роуминге в срезе на отток клиента практически не имеет различий."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3a897cb8",
+   "metadata": {},
+   "source": [
+    "**Рассмотрим корреляционную матрицу.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "f3a6ead2",
@@ -2089,6 +2205,45 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8949518d",
+   "metadata": {},
+   "source": [
+    "Действительно, наибольшее влияние на зависимую переменную факта оттока клиента влияют независимые переменные\n",
+    "**cust_serv_calls**, **day_mins** и **overage_fee**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9353fdae",
+   "metadata": {},
+   "source": [
+    "## **4. Кластеризация клиентов.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dfaa1bc0",
+   "metadata": {},
+   "source": [
+    "После завершения исследовательского анализа данных, применем полученную информацию для кластеризации клиентов по значениям независимых переменных."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "96c0ccc2",
+   "metadata": {},
+   "source": [
+    "Разобьем наши данные на X и y, где:\n",
+    "- `X` - независимые переменные.\n",
+    "- `y` - зависимая."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "4f16b6a6",
@@ -2100,6 +2255,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fc3fdf53",
+   "metadata": {},
+   "source": [
+    "Стандартизируем значения независимых переменных."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "id": "fcfc13e1",
@@ -2108,6 +2272,15 @@
    "source": [
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7d87264a",
+   "metadata": {},
+   "source": [
+    "Построим `дендрограмму` клиентов по тем или иным признакам."
    ]
   },
   {
@@ -2134,6 +2307,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "73488c85",
+   "metadata": {},
+   "source": [
+    "Метод иерархической кластеризации выделил 2 кластера. Сравним полученный результат с выбором числа кластеров `методом локтя`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "id": "1caea335",
@@ -2145,6 +2327,15 @@
     "    kmeans = KMeans(n_clusters=i, init='k-means++', max_iter=300, n_init=10, random_state=0)\n",
     "    kmeans.fit(X)\n",
     "    wcss.append(kmeans.inertia_)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "90a98cc5",
+   "metadata": {},
+   "source": [
+    "Визуализируем результат."
    ]
   },
   {
@@ -2167,6 +2358,15 @@
    "source": [
     "plt.plot(range(1,11),wcss, marker='.')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9905fd22",
+   "metadata": {},
+   "source": [
+    "`Метод локтя`, скорее, выбрал 3 кластера, а не 2. Используем метод `K-средних` для разбиения наших наблюдей на 3 кластера."
    ]
   },
   {
@@ -2292,6 +2492,54 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3cf9bbd5",
+   "metadata": {},
+   "source": [
+    "Кластер с самой большой вероятностью оттока заметно чаще обращается в службу поддержки, чаще говорит по телефону и имеет\n",
+    "наибольшую переплату за переиспользование сервиса. Кластер с наименьшей вероятностью оттока, составляющей всего *1.6%*, напротив,\n",
+    "практически не обращается в службу поддержки, заметно меньше говорит по телефону и платит за переиспользование стандартного\n",
+    "пакета. В целом, подтвердились все гипотезы, озвученные на этапе исследовательского анализа данных."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7810d129",
+   "metadata": {},
+   "source": [
+    "### **5. выбор, обучение и оценка качества модели прогнозирования оттока клиентов.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a4337c45",
+   "metadata": {},
+   "source": [
+    "Обучим 9 различных моделей классификации и выделим лучшую из них:\n",
+    "- Логистическая регрессия (LogisticRegression).\n",
+    "- Случайный лес (RandomForestClassifier).\n",
+    "- Метод k-ближайших соседей (KNeighborsClassifier).\n",
+    "- Наивный байесовский классификатор (GaussianNB).\n",
+    "- Метод опорных векторов (SVC).\n",
+    "- Дерево решений (DecisionTreeClassifier).\n",
+    "- Классификатор экстремально рандомизированных деревьев (ExtraTreesClassifier).\n",
+    "- Ридж-классификатор (RidgeClassifier).\n",
+    "- Градиентный бустинг (GradientBoostingClassifier)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "df4ee11c",
+   "metadata": {},
+   "source": [
+    "Разделим данные на обучающую и тестовую выборку."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "78ccd8ed",
@@ -2299,6 +2547,15 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c0779ff7",
+   "metadata": {},
+   "source": [
+    "Стандартизируем отдельно обучающую и отдельно валидационную выборку."
    ]
   },
   {
@@ -2311,6 +2568,15 @@
     "scaler.fit(X_train)\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.fit_transform(X_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7978a014",
+   "metadata": {},
+   "source": [
+    "Напишем `функцию` обучения модели и подсчета метрик."
    ]
   },
   {
@@ -2400,6 +2666,24 @@
     "for mod in [LogisticRegression(), RandomForestClassifier(), KNeighborsClassifier(), GaussianNB(), SVC(),\n",
     "            DecisionTreeClassifier(), ExtraTreesClassifier(), RidgeClassifier(), GradientBoostingClassifier()]:\n",
     "    train_model(mod)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "845ee576",
+   "metadata": {},
+   "source": [
+    "По всем метрикам `градиентовый бустинг` оказался лучше своих конкурентов на валидационной выборке. Для предсказания оттока клиента лучше всего использовать его."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8d3fc421",
+   "metadata": {},
+   "source": [
+    "При стандартных значениях параметров, метрики градиентнового бустинга выглядят следующим образом."
    ]
   },
   {
