--- a/Telecom_Analysis.ipynb
+++ b/Telecom_Analysis.ipynb
@@ -2683,7 +2683,7 @@
    "id": "8d3fc421",
    "metadata": {},
    "source": [
-    "При стандартных значениях параметров, метрики градиентнового бустинга выглядят следующим образом."
+    "При стандартных значениях параметров, метрики `градиентнового бустинга` выглядят следующим образом."
    ]
   },
   {
@@ -2711,6 +2711,15 @@
     "         '\\nPrecision_score:',precision_score(y_test,y_pred),\n",
     "         '\\nRecall_score:',recall_score(y_test,y_pred),\n",
     "         '\\nF1_score:',f1_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cd6d8543",
+   "metadata": {},
+   "source": [
+    "Попробуем увеличить метрики с помощью подбора наилучших параметров `GridSearchCV`."
    ]
   },
   {
@@ -2749,6 +2758,24 @@
     "         '\\nPrecision_score:',precision_score(y_test,y_pred),\n",
     "         '\\nRecall_score:',recall_score(y_test,y_pred),\n",
     "         '\\nF1_score:',f1_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "20ece99e",
+   "metadata": {},
+   "source": [
+    "Все метрики достаточно выросли, нынешняя точность нашей модели составляет *98.4%*. Думаю, на этом можно закончить оптимизирование параметров `градиентного бустинга`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f23423d7",
+   "metadata": {},
+   "source": [
+    "**Рассмотрим матрицу ошибок, классификационный репорт и изобразим ROC-кривую.**"
    ]
   },
   {
@@ -2839,6 +2866,64 @@
     "plt.ylabel('True Positive rate')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "02fc7ed1",
+   "metadata": {},
+   "source": [
+    "Все метрики имеют достаточно высокие показатели, что говорит о высоком качестве `модели`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e6dc6234",
+   "metadata": {},
+   "source": [
+    "### **6. Вывод и рекомендации.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "26b69114",
+   "metadata": {},
+   "source": [
+    "В исследовательском анализе мы увидели, что средние показатели переменных **cust_serv_calls**, **day_mins** и **overage_fee**\n",
+    "значимо положительно влияют на отток клиента. По выше перечисленным данным вполне можно представить гипотетическую картину для\n",
+    "ушедшего клиента: он большую часть времени, нежели действующие пользователи, проводит в телефонных звонках. Возможно, из-за\n",
+    "проблем со связью, он обращается в службу поддержки с целью разрешения ситуации. Служба поддержки, по тем или иным причинам, не\n",
+    "может разрешить проблему клиента со связью, из-за чего, после нескольких обращений в поддержку, клиент перестает пользовататься\n",
+    "услугами сервиса.\n",
+    "\n",
+    "К тому же, одна из причин ухода клиента - весомые переплаты за переиспользование стандартного пользовательского пакета.\n",
+    "Рекомендуется провести `A/B тест` для активных клиентов с числом минут, проведенных в звонках и количеством обращений в службу\n",
+    "поддержки выше среднего относительно действующих пользователей, а также переплатой выше *9.83*:\n",
+    "- `первой части клиентов` - ничего не изменять.\n",
+    "- `второй` - понизить сумму переплаты до 9.83."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ed624970",
+   "metadata": {},
+   "source": [
+    "По различиям в независимых переменных, нам удалось разделить клиентов на 3 кластера и подтвердить теорию о том, что переменные\n",
+    "**cust_serv_calls**, **day_mins** и **overage_fee** оказывают наибольшее влияние на отток пользователя."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ef82764b",
+   "metadata": {},
+   "source": [
+    "Мы обучили 9 различных моделей классификации и эмпирическим методом выяснили, что `градиентный бустинг`, в нашем случае, имеет\n",
+    "наибольшую прогностическую мощность. Оптимизировав параметры, мы смогли добиться *98.4%* точности модели."
    ]
   }
  ],
